--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile 'com.android.volley:volley:1.0.0'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
     testCompile 'junit:junit:4.12'
 }
